--- a/examples/03_advanced_plotting_features.ipynb
+++ b/examples/03_advanced_plotting_features.ipynb
@@ -128,13 +128,13 @@
    "id": "bb9cbef9-7a23-4b5a-85e4-ee452ef542f7",
    "metadata": {},
    "source": [
-    "In case you see a warning that \"The figure layout has changed to tight plt.tight_layout()\", this is a bug in certain Matplotlib versions which outputs the warning because the tight layout is requested by both *seisPLT.plot()* calls on the same figure. It does not harm functionality, though."
+    "In case you see a warning that \"The figure layout has changed to tight plt.tight_layout()\", this is a bug in certain Matplotlib versions which outputs the warning because the tight layout is requested by both *seisplot.plot()* calls on the same figure. It does not harm functionality, though."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "411f78b6-58f9-4499-ba60-2cb41b4d1b9c",
+   "id": "64b2eb76-fdb6-47db-989a-228b0c92755d",
    "metadata": {},
    "outputs": [],
    "source": []
