--- a/examples/05_field_data.ipynb
+++ b/examples/05_field_data.ipynb
@@ -5,7 +5,7 @@
    "id": "6797f0ce-bbf2-4209-989c-8bb976b5bfa2",
    "metadata": {},
    "source": [
-    "In this tutorial, we would like to demonstrate how to plot non-seismic data like a velocity model. This tutorial requires the __seisio__ package to be available (in order to read field data). Also, the (public domain) test data needs to be available, see the file README in the examples/data folder. If you have another SEG-Y I/O package installed, you could alternatively use it and adjust the corresponding lines below. First, import the required modules:"
+    "In this tutorial, we would like to demonstrate how to plot actual field data. This tutorial requires the __seisio__ package to be available (in order to read field data). Also, the (public domain) test data needs to be available, see the file README in the examples/data folder. If you have another SEG-Y I/O package installed, you could alternatively use it and adjust the corresponding lines below. First, import the required modules:"
    ]
   },
   {
@@ -62,7 +62,7 @@
       "INFO: Number of data traces in file: 71284.\n",
       "INFO: Delay (on first trace): 0 (unit as per SEG-Y standard).\n",
       "INFO: Reading all 71284 trace headers from disk...\n",
-      "INFO: Reading all headers took 0.051 seconds.\n",
+      "INFO: Reading all headers took 0.048 seconds.\n",
       "INFO: Ensemble lookup index has filter applied.\n",
       "INFO: Created lookup index for ['fldr'] (order '>').\n",
       "INFO: Number of ensembles: 251\n"
@@ -173,7 +173,7 @@
      "output_type": "stream",
      "text": [
       "INFO: Reading all 71284 trace headers from disk...\n",
-      "INFO: Reading all headers took 0.067 seconds.\n",
+      "INFO: Reading all headers took 0.055 seconds.\n",
       "INFO: Ensemble lookup index has filter applied.\n",
       "INFO: Created lookup index for ['fldr'] (order '>').\n",
       "INFO: Number of ensembles: 251\n",
